Fri Jan  2 03:08:47 2009  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/: use PNG instead of zlib as binary data. [ruby-dev:35666]

Tue Nov 11 01:07:32 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* configure.in: fix SEGV on Mac OS X 10.5.3 with --enable-pthread.
	  a patch from Wataru Kimura in Bug #193 [ruby-core:17333].

Mon Aug 11 09:37:17 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/dl/dl.c (rb_str_to_ptr): should propagate taint to dlptr.

	* ext/dl/dl.c (rb_ary_to_ptr): ditto.

	* ext/dl/sym.c (rb_dlsym_call): should check taint of DLPtrData as
	  well.

Fri Aug  8 10:53:52 2008  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: randomize source port and transaction id.
	  CVE-2008-1447.

	* lib/resolv-replace.rb (UDPSocket#bind): don't resolv host if host is
	  "".

Mon Aug  4 14:49:35 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP::rcptto): fix a typo. a patch from
	  Masao Takaku <masao at nii.ac.jp>
	  fix [ruby-dev:35489].

Mon Aug  4 14:13:15 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regex.c (xmalloc, xrealloc, xfree): not to use ruby managed memory.

	* regex.c (DOUBLE_STACK, re_compile_fastmap0, re_adjust_startpos),
	  (re_search, re_match_exec): check if failed to allocate memory.

Mon Aug  4 13:53:42 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big2str0, bigsqr): made interruptible.  [ruby-Bugs-20622]

Mon Aug  4 13:31:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (check_uint, rb_num2uint, rb_fix2uint): fixed wrong check
	  about 64bit positive value.
Mon Aug  4 13:31:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (check_uint, rb_num2uint, rb_fix2uint): strict check.
	  fixed [ruby-dev:33683]

Thu Jul 17 21:42:07 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP::start): revert to avoid RFC2821
	  violation. [ruby-dev:35487]

Thu Jul 17 21:32:49 2008  Tanaka Akira  <akr@fsij.org>
